# IDAP

./: .editorconfig  .gitignore  IDAP.code-workspace  PROJECT_STATUS.md  README.md  SKELETON_COMPLETION_REPORT.md  idap.code-workspace  readme.md
.github/: copilot-instructions.md
.specify/: README.md
backed/: README.md  pom.xml
backend/python-ai-engine/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
backend/python-ai-engine/src/: main.py
backend/python-ai-engine/src/config/: settings.py
backend/python-ai-engine/src/models/: request_models.py  response_models.py
backend/python-ai-engine/src/prompts/: nl2sql_prompts.py  rag_prompts.py
backend/python-ai-engine/src/services/: llm_service.py
backend/python-ai-engine/src/services/nl2sql/: agent.py  schema_retriever.py  sql_validator.py
backend/python-ai-engine/src/services/rag/: rag_service.py  retriever.py
backend/python-ai-engine/src/websocket/: handler.py
database/: COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  init-db.sh
docs/: 00-AI提示词指南.md  01-架构综述.md  01-概要设计.md  02-规格驱动开发流程.md  02-详细设计-前端.md  02-详细设计-后端.md  02-详细设计-数据库.md  03-TODO清单.md  03-规格驱动开发快速上手.md  04-Docker快速入门.md  05-项目状态.md  07-Docker环境配置.md  08-数据库设计总览.md  09-向量数据库选型.md  10-架构调整说明-向量数据库分离.md  11-数据库操作指南.md  12-MCP测试报告.md  13-Java-Gateway基础框架完成报告.md  README.md  constitution.md  frontend-guidelines.md
frontend/: .env.development  .env.production  .gitignore  .prettierrc  CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
(+180 files in other folders)
